# internet_speed_test

./: .gitignore  .ruff.toml  README.md  config.json.example  pyproject.toml  speed_test.py
tests/: test_speed_test.py
