[project]
name = "internet-speed-test"
version = "0.1.0"
description = "CLI utility for measuring internet download speed"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "W",  # warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"